Photos no longer cropped on wide viewports

--- a/src/App.css
+++ b/src/App.css
@@ -132,16 +132,16 @@ main{
     left: 0;
     backdrop-filter: blur(5px);
     z-index: 9999;
-    padding-top: 10%;
+    padding-top: 7%;
 }
 #zoom-window{
     position: fixed;
-    width: 80%;
+    max-width: 80%;
     height: 80%;
 }
     #zoom-window img{
-        /* min-height: 80%; */
-        min-width: 100%;
+        max-height: 100%;
+        max-width: 100%;
         align-self: center;
     }
     #zoom-window i{
